--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "material-table": "^1.69.2",
     "react": "^17.0.2",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
